[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/UpgradeUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/BoxFocus.tres" type="StyleBox" id=2]
[ext_resource path="res://Scenes/UI/BoxStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/UI/BoxPressed.tres" type="StyleBox" id=4]

[node name="UpgradeUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9
margin_top = 3.0
margin_bottom = 3.0

[node name="Button1" type="Button" parent="ButtonContainer"]
pause_mode = 2
margin_right = 381.0
margin_bottom = 864.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="Button2" type="Button" parent="ButtonContainer"]
pause_mode = 2
margin_left = 385.0
margin_right = 766.0
margin_bottom = 864.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="Button3" type="Button" parent="ButtonContainer"]
pause_mode = 2
margin_left = 770.0
margin_right = 1152.0
margin_bottom = 864.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[connection signal="pressed" from="ButtonContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ButtonContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ButtonContainer/Button3" to="." method="_on_Button3_pressed"]
